--- a/Web/src/app/components/util/top-image/top-image.component.html
+++ b/Web/src/app/components/util/top-image/top-image.component.html
@@ -1,4 +1,4 @@
-<div class="top-platform-image">
+<div class="top-platform-image global-container-min">
     <img [src]="urlImage" fxHide.xs="true"/>
     <div class="top-platform-text" fxHide.xs="true">
         <h2 *ngIf="title" class="bold">{{title}}</h2>
