--- a/Web/src/app/components/advisor/advice-card/advice-card.component.html
+++ b/Web/src/app/components/advisor/advice-card/advice-card.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutAlign="center center" fxLayoutGap.gt-xs="30px" fxLayoutGap.lt-sm="10px">
-    <div fxLayout="column" (click)="goToAssetDetails()" class="asset-column">
+    <div fxLayout="column" (click)="goToAssetDetails()" class="asset-column" fxLayoutGap="5px">
       <div fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.lt-sm="center center" fxLayoutGap="10px">
         <div fxHide.lt-sm class="asset-icon">
           <img [src]="getAssetImgUrl()" onerror="this.style.display='none'">
