--- a/Web/src/app/components/advisor/advice-card/advice-card.component.css
+++ b/Web/src/app/components/advisor/advice-card/advice-card.component.css
@@ -35,13 +35,21 @@
     font-weight: 500;
 }
 
+
 .expert-name{
-    width: 260px;
+    width: calc(100vh - 20px);
+    max-width: 260px;
+}
+
+@media(min-width: 960px){
+    .expert-name{
+        width: 260px;
+    }
 }
 
 
 .follow-btn{
-    margin-left: 43px;
+    margin-left: 40px;
 }
 
 @media(max-width: 599px){
@@ -69,6 +77,10 @@
 .asset-code-name,
 .asset-name{
     width: 160px;;
+}
+
+.asset-name{
+    font-size: 14px;
 }
 
 .asset-icon{
