--- a/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
+++ b/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
@@ -1,7 +1,7 @@
 <button class="modal-close" [mat-dialog-close]="false" mat-dialog-close>&times;</button>
 <div fxLayout="column" fxLayoutAlign="center center" class="modal-container">
   <mat-dialog-content class="modal-content">
-    <p><b>{{getAdviceType()}}</b> rating to <b>{{data.assetName}}</b> at <b>{{data.lastValue | currency}}</b></p>
+    <p><b>{{getAdviceType()}}</b> rating to <b>{{data.assetName}}</b> at <b>{{data.lastValue | valueDisplay}}</b></p>
   </mat-dialog-content>
   <mat-dialog-actions class="btn-actions" fxLayoutGap="20px">
     <button fxFlex mat-stroked-button [mat-dialog-close]="false" mat-dialog-close>Cancel</button>
