--- a/Web/src/app/components/asset/asset-details/asset-details.component.css
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.css
@@ -67,7 +67,8 @@
     cursor: pointer;
 }
 
-.assets-table .white-button{
+.assets-table .white-button,
+.assets-table .blue-button{
     margin: auto;
 }
 
