--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -3,11 +3,8 @@
         <div class="section-title">
             Top Assets
         </div>
-
         <div class="section-subtitle">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis<br>
-            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            The most popular Cryptocurrencies. Follow your favorite coins and see what analysts are saying about them
         </div>
         <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center top" fxLayoutGap="16px">
             <coin-search #CoinSearch [options]="getSearchOptions()"></coin-search>
