--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -2,6 +2,9 @@
   <div class="section-title">
     {{title}}
   </div>
+  <div class="section-subtitle">
+    {{subtitle}}
+  </div>
   <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="16px" class="section-filter" *ngIf="!hideFilters">
     <mat-form-field>
       <mat-select class="experts-sort" placeholder="Experts sorted by"
