--- a/Web/src/app/components/advisor/advices/advices.component.html
+++ b/Web/src/app/components/advisor/advices/advices.component.html
@@ -1,6 +1,6 @@
 <top-image *ngIf="canView()" [title]="getTopTitle()" [subtitle]="getTopText()" [urlImage]="getTopImage()"></top-image>
 <div class="global-container">
-    <top-experts *ngIf="canView() && (!advices || advices.length==0)" [resultsLimit]=4 [hideFilters]=true [title]="'START FOLLOWING EXPERTS'"></top-experts>
+    <top-experts *ngIf="canView() && (!advices || advices.length==0)" [resultsLimit]=4 [hideFilters]=true [title]="'START FOLLOWING EXPERTS'" [subtitle]="''"></top-experts>
     <div *ngIf="advices">
         <div fxLayout="column" fxLayoutAlign="center center" class="global-container blocked-content" *ngIf="!canView()">
             <div class="lock-wrapper">
