--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
@@ -3,7 +3,7 @@
     Expert Ratings
   </div>
   <div class="section-subtitle">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Latest analyst ratings on cryptocurrencies
   </div>
   <div class="recommendation-list" fxHide.lt-md>
     <recommendation-box  [adviceType]="'BUY'" [adviceList]="buyAdvices"></recommendation-box>
