--- a/Web/src/app/components/advisor/expert-details/expert-details.component.html
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.html
@@ -32,7 +32,7 @@
             <td mat-cell *matCellDef="let asset">
               <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px" (click)="goToAssetDetails(asset.assetId, $event)">
                 <div fxHide.lt-sm class="asset-icon">
-                  <img [src]="getAssetImgUrl(asset)" onerror="this.style.display='none'">
+                  <img [src]="getAssetImgUrl(asset)" onerror="this.style.display='none'" onload="this.style.display='unset'"/>
                 </div>
                 <div fxLayout="column" fxLayoutAlign="center start">
                   <div class="table-asset-code">
