--- a/Web/src/app/components/util/coin-search/coin-search.component.html
+++ b/Web/src/app/components/util/coin-search/coin-search.component.html
@@ -11,7 +11,7 @@
         <mat-option [class]="optionClass" *ngFor="let option of searchResults" [value]="option">
             <div class="search-coin-autocomplete-option-div-img">
                 <span class="search-coin-autocomplete-option-div-img-wrapper">
-                    <img onerror="this.style.display='none'" height="17" width="17" [src]="getAssetImgUrl(option.id)">
+                    <img onerror="this.style.display='none'" onload="this.style.display='unset'" height="17" width="17" [src]="getAssetImgUrl(option.id)">
                 </span>
             </div>
             {{option.name}}
