--- a/Web/src/app/components/util/footer/footer.component.css
+++ b/Web/src/app/components/util/footer/footer.component.css
@@ -46,3 +46,10 @@ a{
     font-weight: 500;
     color: #212121;
 }
+
+.disclaimer {
+    font-size: 12px;
+    color: #212121;
+    padding-bottom: 25px;
+    text-align: justify;
+}
