--- a/Web/src/app/components/util/footer/footer.component.html
+++ b/Web/src/app/components/util/footer/footer.component.html
@@ -36,6 +36,11 @@
     </div>
   </div>
   <div class="separator"></div>
+  <div class="disclaimer" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="5px">
+    <span><b>Disclaimer:</b></span>
+    <span>The Site is not intended to provide tax, legal, insurance or investment advice, and nothing on the Site should be construed as an offer to sell, a solicitation of an offer to buy, or a recommendation for any cryptocurrency by Auctus or any third party. You alone are solely responsible for determining whether any investment, security or strategy, or any other product or service, is appropriate or suitable for you based on your investment objectives and personal and financial situation. You should consult an attorney or tax professional regarding your specific legal or tax situation.</span>
+    <span>Auctus Experts collects ratings and price targets of analysts by scanning publicly available information and by receiving reports directly from the analysts or from our users. The information displayed might not be accurate or up to date. The displayed ratings are made entirely at the sole discretion of the analysts. Auctus Experts holds no liability over the analysts’ information or opinions expressed on the site.</span>
+  </div>
   <div class="copright-terms-privacy" fxLayout="row" fxLayoutAlign="space-between center">
     <div>All rights reserved. Copyrights © 2018</div>
     <div class="terms-privacy" fxLayoutGap="6px">
