--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
@@ -55,7 +55,7 @@
         Buy: {{getBuyRecommendationPercentage() | number:'1.1-1'}}%
       </div>
       <div class="close-distribution">
-        Close: {{getCloseRecommendationPercentage() | number:'1.1-1'}}%
+        Hold: {{getCloseRecommendationPercentage() | number:'1.1-1'}}%
       </div>
       <div class="sell-distribution">
         Sell: {{getSellRecommendationPercentage() | number:'1.1-1'}}%
