--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -1,6 +1,6 @@
 
     <div class="recommendation-box" fxLayout="column">
-      <div class="box-title" [class.buy]="adviceType=='BUY'" [class.sell]="adviceType=='SELL'" [class.close]="adviceType=='CLOSE'">{{adviceType}}</div>
+      <div class="box-title" [class.buy]="adviceType=='BUY'" [class.sell]="adviceType=='SELL'" [class.close]="adviceType=='HOLD'">{{adviceType}}</div>
       <table mat-table [dataSource]="adviceList" class="recommendation-table">
         <ng-container matColumnDef="assetCode">
           <th mat-header-cell *matHeaderCellDef> Asset </th>
